--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
     <title>La Notte 24 Ore</title>
   </head>
   <body>
-    
+    <div>
+        {% block content %}
+        {% endblock %}
+    </div>
   </body>
 </html>
