HTML header and styling

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -8,6 +8,9 @@
     <title>La Notte 24 Ore</title>
   </head>
   <body>
+
+    {% include "header.html" %}
+
     <div>
         {% block content %}
         {% endblock %}
