--- a/web/static/src/css/style.css
+++ b/web/static/src/css/style.css
@@ -2,6 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --tw-bg-opacity: 1;
+    --color-primary: rgb(218 159 147 / var(--tw-bg-opacity));
+    --color-secondary: rgb(227 186 175 / var(--tw-bg-opacity));
+    --color-text: rgb(81 79 89 / var(--tw-bg-opacity));
+}
+
+@layer base {
+.background-primary {
+    background-color: var(--color-primary)
+}
+
+.background-secondary {
+    background-color: var(--color-secondary)
+}
+
+.text-primary {
+    color: var(--color-primary)
+}
+
+.text-secondary {
+    color: var(--color-secondary)
+}
+
+.text-base {
+    color: var(--color-text)
+}
+
+}
+
 .title {
     @apply text-2xl font-bold text-red-500 text-center;
+}
+
+.button {
+    @apply bg-amber-500 text-neutral-800 font-bold py-2 px-4 rounded-md;
 }
