--- a/web/static/src/css/style.css
+++ b/web/static/src/css/style.css
@@ -40,6 +40,6 @@
     @apply bg-amber-500 text-neutral-800 font-bold py-2 px-4 rounded-md;
 }
 
-.weather {
-    @icon: md-icon;
+.material-symbols-rounded {
+    font-size: 28px !important;
 }
