--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>La Notte 24 Ore</title>
   </head>
-  <body>
+  <body class="bg-white dark:bg-slate-900 text-gray-900 dark:text-gray-100">
 
     {% include "header.html" %}
     {% include "categories.html" %}
