--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -1,4 +1,4 @@
-<header class="flex w-full items-center bg-white dark:bg-slate-800 drop-shadow-xl">
+<header class="flex w-full items-center bg-white dark:bg-neutral-800 drop-shadow-xl">
   <div class="container flex mx-auto max-w-full px-8">
     <!-- LOGO -->
     <div class="relative flex items-center justify-between w-1/2">
