Testo colorato prova

--- a/web/routes/templates/about.html
+++ b/web/routes/templates/about.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-Testo di prova di un bracci educato
+<p class="text-red-900 dark:text-red-300">Testo prova con colore</p>
 
 {% endblock %}
