--- a/web/routes/templates/about.html
+++ b/web/routes/templates/about.html
@@ -2,6 +2,19 @@
 
 {% block content %}
 
-<p class="text-red-900 dark:text-red-300">Testo prova con colore</p>
+<div class="m-12 grid grid-cols-2">
+    <div class="text-left text-4xl font-bold">
+        <h1>Benvenut* sul nostro sito, dove l'eleganza e la professionalità sono la norma.</h1>
+        <h1>Siamo felici che tu sia qui con noi, perché sappiamo che meriti solo il meglio e siamo pronti</h1>
+        <h1>offrirtelo con orgoglio.</h1>
+    </div>
+    <div>
+        <img src=""> <!-- Logo de "La Notte 24 ore" -->
+    </div>
+</div>
+
+
+
+
 
 {% endblock %}
