--- a/web/routes/templates/about.html
+++ b/web/routes/templates/about.html
@@ -11,6 +11,29 @@
     <div>
         <img src=""> <!-- Logo de "La Notte 24 ore" -->
     </div>
+    <br><br><br><br>
+    <div class="text-left text-4xl font-bold">
+        <h1>Aggiornamenti costanti</h1>
+        <br>
+        <div class="text-lg">
+            <p>Offriamo aggiornamenti continui su ciò che sta accadendo nel mondo.</p>
+        </div>
+    </div>
+    <div>
+        <img src=""> <!-- Immagine di una notizia  del sito come esempio -->
+    </div>
+    <br><br><br><br>
+    <div class="text-left text-4xl font-bold">
+        <h1>Convenienza</h1>
+        <br>
+        <div class="text-lg">
+            <p>Non c'è niente di più comodo e conveniente di leggere notizie interessanti sul proprio dispositivo e GRATUITAMENTE</p>
+            <p>Cosa stai aspettanto? Segui il nostro sito quotidianamente e ne rimarrai soddisfatto</p>
+        </div>
+    </div>
+    <div>
+        <img src=""> <!-- Immagine di una notizia  del sito come esempio -->
+    </div>
 </div>
 
 
