--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -3,7 +3,7 @@
     <!-- LOGO -->
     <div class="relative flex items-center justify-between w-1/2">
       <div class="w-60 max-w-full px-2">
-        <a href="javascript:void(0)" class="block w-full py-4">
+        <a href="/" class="block w-full py-4">
           <picture>
             <source srcset="{{ url_for('static', filename='assets/img/logo/long_logo_dark.png') }}" media="(prefers-color-scheme: dark">
             <img
@@ -14,15 +14,18 @@
       </div>
     </div>
     <!-- END LOGO -->
-    <div class="flex divide-x -mx-4 items-center justify-end w-1/2">
-      <a href="javascript:void(0)" class="flex items-center hover:text-primary text-dark text-base font-medium px-4">
+    <div class="flex divide-x -mx-4 items-center justify-end w-1/2 hover:text-primary">
+      <div class="flex items-center hover:text-primary text-dark text-base font-medium px-4">
         <span class="material-symbols-rounded dark:text-gray-50"> search </span>
-        <span
-          class="text-dark dark:text-gray-50 px-4 py-2 hover:text-primary text-base font-medium"
-        >
-          Ricerca
-      </span>
-    </a>
+        <form action="/search" method="get">
+          <input
+          type="search"
+          placeholder="Search"
+          name="search"
+          class="text-dark bg-white dark:bg-neutral-800 dark:text-gray-50 px-4 py-2 hover:text-primary text-base font-normal focus:outline-none" 
+          >
+        </form>
+      </div>
       <span class="flex items-center text-dark dark:text-gray-50 text-base font-medium px-6">
         <img src="{{weather_icon}}" alt="" width="56px"/>
         <a href="{{weather_link}}" class="px-6 hover:text-primary">
