Linked login page with internal Login APIs

--- a/web/routes/templates/index.html
+++ b/web/routes/templates/index.html
@@ -16,7 +16,7 @@
                 {% endif %}
             {% endif %}
             <div>
-            <a href="{{article['url']}}" class="text-lg font-medium">{{article['title']}}</a>
+            <a href="{{article['url']}}" class="text-lg font-medium hover:text-sky-500">{{article['title']}}</a>
             <p class="text-xs">di 
                 <span class="text-xs font-medium">{{article['source']['name']}}</span> 
                 - 
