--- a/web/routes/templates/signup.html
+++ b/web/routes/templates/signup.html
@@ -6,7 +6,7 @@
       class="drop-shadow-xl rounded-xl bg-white border-neutral-300 dark:bg-neutral-800 dark:border-neutral-700 border grid grid-cols-1 p-24"
     >
       <div class="mb-8 text-center text-xl font-bold">
-        Sign-in to La Notte 24 Ore
+        Sign-up to La Notte 24 Ore
       </div>
 
       {% if error is defined %}
