--- a/web/templates/categories.html
+++ b/web/templates/categories.html
@@ -1,4 +1,4 @@
-<nav class="sticky flex w-full p-3 items-center bg-white dark:bg-neutral-800 drop-shadow-xl">
+<nav class="sticky flex w-full p-3 justify-center items-center bg-white dark:bg-neutral-800 drop-shadow-xl">
     {% for category in categories %} 
     <a href="/categories?category={{category}}" class="mx-6 hover:text-teal-500">{{category.split() | first | capitalize}}</a>
     {% endfor %}
