--- a/web/routes/templates/forgot_password.html
+++ b/web/routes/templates/forgot_password.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="flex justify-center items-center m-20">
-  <form action="/signup" method="post">
+  <form action="/forgot_password" method="post">
     <div
       class="drop-shadow-xl rounded-xl bg-white border-neutral-300 dark:bg-neutral-800 dark:border-neutral-700 border grid grid-cols-1 p-24"
     >
