Nearly completed project, implemented favorites, user info, profile picture and settings, added footer, privacy policy and license link

--- a/web/routes/templates/index.html
+++ b/web/routes/templates/index.html
@@ -6,6 +6,7 @@
         
     </div>
     <div class="m-11 p-5 rounded-2xl drop-shadow-xl bg-gray-100 dark:bg-neutral-700">
+        <form action="/favorite" method="post">
         {% for article in news['articles'] if not 'dagospia' in article['url'] %}
         <div class="p-2 flex">
             {% if loop.index is divisibleby(2) %}
@@ -23,6 +24,10 @@
                 <span class="text-xs">{{article['publishedAt']|format_datetime}}</span> 
             </p>
             <p class="text-sm">{{article['description']}}</p>
+            {% if isLoggedIn is defined %}
+            <input type="text" name="article" value="{{article}}" hidden>
+            <button type="submit" class="text-sm text-neutral-700 dark:text-neutral-400 hover:text-neutral-400 hover:dark:text-neutral-200">Aggiungi ai preferiti</button>
+            {% endif %}
             </div>
             {% if loop.index is not divisibleby(2) %}
                 {% if article['urlToImage'] is not none %} 
@@ -38,6 +43,7 @@
             <div class="pb-3"></div>
         {% endif %}
         {% endfor %}
+    </form>
     </div>
 </div>
 {% endblock %}
