--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='assets/img/logo/small_logo_nobg.png') }}" type="image/x-icon">
     <title>La Notte 24 Ore</title>
   </head>
-  <body class="bg-white dark:bg-neutral-800 text-gray-900 dark:text-gray-100">
+  <body class="flex flex-col bg-white dark:bg-neutral-800 text-gray-900 dark:text-gray-100 h-screen">
 
     {% include "header.html" %}
     {% include "categories.html" %}
 
-    <div>
+    <div class="flex-grow">
         {% block content %}
         {% endblock %}
     </div>
+
+    {% include "footer.html" %}
 
   </body>
 </html>
