last changes before final release

--- a/web/routes/templates/user.html
+++ b/web/routes/templates/user.html
@@ -74,6 +74,7 @@
     class="m-11 p-5 rounded-2xl drop-shadow-xl bg-gray-100 dark:bg-neutral-700"
   >
   {% for article in news['articles'] if not 'dagospia' in article['url'] %}
+  <form action="/favorite" method="post">
         <div class="p-2 flex">
             {% if loop.index is divisibleby(2) %}
                 {% if article['urlToImage'] is not none %} 
@@ -90,6 +91,10 @@
                 <span class="text-xs">{{article['publishedAt']|format_datetime}}</span> 
             </p>
             <p class="text-sm">{{article['description']}}</p>
+            <input type="text" name="article" value="{{article}}" hidden>
+            <input type="text" name="remove" value="1" hidden>
+            <input type="text" name="id" value="{{news['id'][loop.index-1]}}" hidden>
+            <button type="submit"class="text-sm text-neutral-700 dark:text-neutral-400 hover:text-neutral-400 hover:dark:text-neutral-200">Rimuovi dai preferiti</button>
             </div>
             {% if loop.index is not divisibleby(2) %}
                 {% if article['urlToImage'] is not none %} 
@@ -105,6 +110,7 @@
             <div class="pb-3"></div>
         {% endif %}
         {% endfor %}
+    </form>
 </div>
 </div>
 
