--- a/web/templates/meteo.html
+++ b/web/templates/meteo.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col justify-center items-center m-8">
-  <div class="grid grid-cols-2 gap-12">
+  <div class="grid grid-cols-2 gap-12 divide-y">
     <div
       class="flex flex-col col-span-2 justify-center items-center p-12 bg-neutral-200 dark:bg-neutral-600 rounded-xl shadow-xl"
     >
@@ -44,5 +44,15 @@
         <p class="italic">{{weather_widget['metar']}}</p>
       </div>
     </div>
+    {% if isLoggedIn is not none %}
+    <div
+      class="flex flex-col col-span-2 justify-center items-center"
+    >
+    <p class="text-3xl font-bold text-center mt-8 tb-2">
+      Favorites
+    </p>
+      {% include "favorites.html" %}
+    </div>
+    {% endif %}
   </div>
 </div>
