--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -12,7 +12,7 @@
                 <p>2023, La Notte 24 Ore. GPLv3 License</p>
             </div>
             <div class="border-b border-neutral-400 dark:border-neutral-600 my-3"></div>
-            <a href="https://github.com/owosrl/LaNotte24Ore">
+            <a href="https://github.com/strzelca/LaNotte24Ore">
                 <span class="material-symbols-rounded text-neutral-500 hover:text-neutral-300">
                     code
                 </span>
@@ -27,7 +27,7 @@
         <div class="basis-1/6">
             <div class="text-dark dark:text-white mb-4 font-medium">LEGAL INFO</div>
             <div class="text-neutral-700 dark:text-neutral-400 hover:text-neutral-400 hover:dark:text-neutral-200 my-0.5"><a href="/policy">Privacy Policy</a></div>
-            <div class="text-neutral-700 dark:text-neutral-400 hover:text-neutral-400 hover:dark:text-neutral-200 my-0.5"><a href="https://github.com/owosrl/LaNotte24Ore/blob/main/LICENSE">License</a></div>
+            <div class="text-neutral-700 dark:text-neutral-400 hover:text-neutral-400 hover:dark:text-neutral-200 my-0.5"><a href="https://github.com/strzelca/LaNotte24Ore/blob/main/LICENSE">License</a></div>
         </div>
         <div class="basis-1/6">
             <div class="text-dark dark:text-white mb-4 font-medium">CONTACTS</div>
